--- a/args.gn
+++ b/args.gn
@@ -1,4 +1,5 @@
 # Set build arguments here. See `gn help buildargs`.
+# Build for x86 architecture (32-bit)
 target_cpu = "x86"
 is_official_build = false
 is_component_build = false
